Added ClaimTaxNumberCode and checkmark fixes